# whey

./: .bumpversion.cfg  .deepsource.toml  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  demo.py  example_pyproject.toml  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: FUNDING.yml  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bootstrap.yml  conda_ci.yml  docs_test_action.yml  flake8.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml  smoke_test.yml
doc-source/: Source.rst  cli.rst  cli_extension.py  comparison.py  comparison.rst  comparison.toml  conf.py  configuration.rst  contributing.rst  docutils.conf  extending.rst  index.rst  license.rst  local_extension.py  pyproject.toml  requirements.txt
doc-source/_static/: style.css
doc-source/_templates/: base.html
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: additional_files.rst  builder.rst  config.rst  foreman.rst  whey.rst
tests/: conftest.py  example_configs.py  requirements.txt  test_build.py  test_builder_methods.py  test_cli.py  test_config.py  test_foreman.py  test_pep517_backend.py  test_utils.py  utils.py
tests/test_build_/: test_build_additional_files.yml  test_build_additional_files_source_dir.txt  test_build_additional_files_source_dir.yml  test_build_complete_COMPLETE_A_.RECORD  test_build_complete_COMPLETE_A_.toml  test_build_complete_COMPLETE_A_.txt  test_build_complete_COMPLETE_A_.yml  test_build_complete_COMPLETE_B_.RECORD  test_build_complete_COMPLETE_B_.toml  test_build_complete_COMPLETE_B_.txt  test_build_complete_COMPLETE_B_.yml  test_build_complete_COMPLETE_B_EXPRESSION_1_.RECORD  test_build_complete_COMPLETE_B_EXPRESSION_1_.toml  test_build_complete_COMPLETE_B_EXPRESSION_1_.txt  test_build_complete_COMPLETE_B_EXPRESSION_2_.RECORD  test_build_complete_COMPLETE_B_EXPRESSION_2_.toml  test_build_complete_COMPLETE_B_EXPRESSION_2_.txt  test_build_complete_COMPLETE_B_INVALID_EXPRESSION_1_.RECORD  test_build_complete_COMPLETE_B_INVALID_EXPRESSION_1_.toml  test_build_complete_COMPLETE_B_INVALID_EXPRESSION_1_.txt  test_build_complete_COMPLETE_B_SYNTAX_ERROR_EXPRESSION_1_.RECORD  test_build_complete_COMPLETE_B_SYNTAX_ERROR_EXPRESSION_1_.toml  test_build_complete_COMPLETE_B_SYNTAX_ERROR_EXPRESSION_1_.txt  test_build_complete_LONG_REQUIREMENTS_.RECORD  test_build_complete_LONG_REQUIREMENTS_.toml  test_build_complete_LONG_REQUIREMENTS_.txt  test_build_complete_epoch_COMPLETE_A_.RECORD  test_build_complete_epoch_COMPLETE_B_.RECORD  test_build_complete_epoch_LONG_REQUIREMENTS_.RECORD  test_build_complete_epoch_LONG_REQUIREMENTS_.txt  test_build_editable_0_2_COMPLETE_A_.txt  test_build_editable_0_2_COMPLETE_A_.yml  test_build_editable_0_2_COMPLETE_B_.txt  test_build_editable_0_2_LONG_REQUIREMENTS_.txt  test_build_editable_0_3_COMPLETE_A_.txt  test_build_editable_0_3_COMPLETE_B_.txt  test_build_editable_0_3_LONG_REQUIREMENTS_.txt  test_build_editable_0_3_LONG_REQUIREMENTS_.yml  test_build_editable_COMPLETE_A_.txt  test_build_editable_COMPLETE_B_.txt  (+67 more)
tests/test_builder_methods_/: test_create_editables_files.yml  test_create_editables_files_0_3_.yml
tests/test_cli_/: test_bad_config_show_traceback_author_comma_.txt  test_bad_config_show_traceback_bad_name_.txt  test_bad_config_show_traceback_bad_requires_python_.txt  test_bad_config_show_traceback_bad_version_.txt  test_bad_config_show_traceback_classifiers_wrong_type_.txt  test_bad_config_show_traceback_dependencies_wrong_type_.txt  test_bad_config_show_traceback_dynamic_name_.txt  test_bad_config_show_traceback_keywords_wrong_type_.txt  test_bad_config_show_traceback_maintainer_comma_.txt  test_bad_config_show_traceback_missing_license_file0_.txt  test_bad_config_show_traceback_missing_license_file1_.txt  test_bad_config_show_traceback_missing_readme_file0_.txt  test_bad_config_show_traceback_missing_readme_file1_.txt  test_bad_config_show_traceback_no_name_.txt  test_bad_config_show_traceback_no_version_.txt  test_build_additional_files.yml  test_build_binary_complete_COMPLETE_A_.yml  test_build_binary_complete_COMPLETE_B_.yml  test_build_complete_COMPLETE_A_.yml  test_build_complete_COMPLETE_B_.yml  test_build_sdist_complete_COMPLETE_A_.yml  test_build_wheel_complete_COMPLETE_A_.yml  test_build_wheel_complete_COMPLETE_B_.yml  test_build_wheel_via_builder_complete_COMPLETE_A_.yml  test_cli_build_success_dependencies_.yml  test_cli_build_success_description_.yml  test_cli_build_success_keywords_.yml  test_cli_build_success_maintainers_.yml  test_cli_build_success_requires_python_complex_.yml  test_cli_build_success_urls_.yml  test_show_builders_binary_and_sdist_binary_conda_.txt  test_show_builders_binary_and_sdist_sdist_and_wheel_.txt  test_show_builders_error.txt  test_show_builders_none_wheel_.txt  test_show_builders_none_whey_pth_.txt  test_show_builders_sdist_binary_conda_.txt  test_show_builders_whey_conda_and_whey_pth_whey_pth_.txt  test_show_builders_whey_conda_whey_pth_.txt
tests/test_config_/: test_backfill_classifiers_All_Platforms_.yml  test_backfill_classifiers_CPython_.yml  test_backfill_classifiers_GPLv2_.yml  test_backfill_classifiers_GraalPython_.yml  test_backfill_classifiers_LGPL_3_0_or_later_.yml  test_backfill_classifiers_Linux_.yml  test_backfill_classifiers_MIT_License_.yml  test_backfill_classifiers_Multiple_Implementations_.yml  test_backfill_classifiers_Multiple_Platforms_1_.yml  test_backfill_classifiers_Multiple_Platforms_2_.yml  test_backfill_classifiers_PyPy_.yml  test_backfill_classifiers_Windows_.yml  test_backfill_classifiers_defaults_.yml  test_backfill_classifiers_macOS_.yml  test_backfill_classifiers_multiple_py_versions_.yml  test_backfill_classifiers_py36_.yml  test_backfill_classifiers_py37_.yml  test_backfill_classifiers_py38_.yml  (+50 more)
whey/: __init__.py  __main__.py  _editable.py  _traceback_handler.py  additional_files.py  builder.py  config.py  foreman.py  utils.py
(+47 files in other folders)
