[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "whey"
version = "0.0.16"
description = "A simple Python wheel builder for simple projects."
readme = "README.rst"
keywords = [ "build", "distribution", "packaging", "pep517", "pep621", "sdist", "wheel",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/whey"
"Issue Tracker" = "https://github.com/repo-helper/whey/issues"
"Source Code" = "https://github.com/repo-helper/whey"
Documentation = "https://whey.readthedocs.io/en/latest"

[project.scripts]
whey = "whey.__main__:main"

[project.optional-dependencies]
readme = [ "docutils==0.16", "pyproject-parser[readme]>=0.3.0",]
all = [ "docutils==0.16", "pyproject-parser[readme]>=0.3.0",]

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
license-key = "MIT"

[tool.sphinx-pyproject]
github_username = "repo-helper"
github_repository = "whey"
author = "Dominic Davis-Foster"
project = "whey"
copyright = "2021 Dominic Davis-Foster"
language = "en"
package_root = "whey"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.httpdomain",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinxcontrib.toctree_plus",
    "sphinx_debuginfo",
    "seed_intersphinx_mapping",
    "sphinx_click",
    "configconfig.autoconfig",
    "sphinx_toolbox_experimental.html_section",
    "sphinx_toolbox_experimental.autosummary_widths",
    "sphinx_toolbox_experimental.needspace",
    "sphinx_toolbox_experimental.peps",
    "sphinx_toolbox_experimental.toml",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "furo"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[project.entry-points."whey.builder"]
whey_sdist = "whey.builder:SDistBuilder"
whey_wheel = "whey.builder:WheelBuilder"
